# Tetros

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: Block.cxx  Block.h  BlockTemplates.h  CMakeLists.txt  Debug.cpp  Debug.h  GLRect.cxx  GLRect.frag  GLRect.h  GlRect.vert  Grid.cxx  Grid.h  Mesh.cxx  Mesh.h  Rect.vert  Shader.cxx  Shader.h  Square.cxx  Square.h  TexturedMesh.cxx  TexturedMesh.h  glad.c  main.cxx
src/resources/shaders/: Color.frag  Color.vert  ColorAndText.frag  ColorAndText.vert  Texture.frag
